--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -15,12 +15,18 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dev-plugins/react-navigation": "^0.0.6",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-native-firebase/auth": "^20.0.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.8",
+    "expo-build-properties": "^0.12.1",
     "expo-constants": "~16.0.1",
+    "expo-dev-client": "^4.0.14",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
+    "expo-modules-autolinking": "^1.11.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
